--- a/.github/actions/godoc-action/Dockerfile
+++ b/.github/actions/godoc-action/Dockerfile
@@ -2,7 +2,13 @@ FROM golang:latest
 
 ENV GO111MODULE=on
 
-RUN go get -u golang.org/x/tools/cmd/godoc
+RUN apt update
+RUN apt upgrade -y
+
+
+ENV GOBIN /go/bin
+
+RUN go get golang.org/x/tools/cmd/godoc
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod 700 /entrypoint.sh
